fix project spacing

--- a/src/sass/global/portfolio.sass
+++ b/src/sass/global/portfolio.sass
@@ -30,7 +30,7 @@
     grid-template-columns: 1fr 1fr
     grid-column-gap: 3rem
     align-items: center
-    margin-bottom: 2vh
+    margin-bottom: 5vh
 
     img 
         width: 100%
